Initial implementation of ScopedMDC
Signed-off-by: Filip Egeric <filip.egeric@gmail.com>